--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 <div class="title">
                     <h3 class="bold">SKILL'S</h3>
                 </div>
-                <ul class="show">
+                <ul class="hide">
                     <li>
                         <div class="skill_name">
                             Html & SCC & SASS
@@ -98,7 +98,7 @@
                 <div class="title">
                     <h3 class="bold">SOCIAL</h3>
                 </div>
-                <ul class="show">
+                <ul class="hide">
                     <li>
                         <div class="icon">
                             <i class="fab fa-facebook-square"></i>
@@ -147,9 +147,9 @@
     <div class="resume_right">
         <div class="resume_item resume_about">
             <div class="title" class="clik">
-                <p class="bold">About Me</p>
+                <h4 class="bold">About Me</h4>
             </div>
-            <p class="show">I am interested in IT and everything in its orbit. I recently began to be fascinated by web programming.<br>
+            <p >I am interested in IT and everything in its orbit. I recently began to be fascinated by web programming.<br>
                 I am keen to gain more experience and opportunities to grow and develop in this field.<br>
                 I am courteous, friendly and open-minded, I like to work at a place where there are exchanges of creative ideas, constructive discussions and joint decision-making.<br>
                 I am therefore currently looking for a job or an internship as a junior front-end develop.</p>
@@ -158,7 +158,7 @@
             <div class="title">
                 <h3 class="bold">Work Experience</h3>
             </div>
-            <ul class="show">
+            <ul class="hide">
                 <li>
                     <div class="date">November 2018 - November 2019</div>
                     <div class="info">
@@ -183,7 +183,7 @@
             <div class="title">
                 <h3 class="bold" >Education</h3>
             </div>
-            <ul class="show">
+            <ul class="hide">
                 <li>
                     <div class="date">2015 - 2019</div>
                     <div class="info">
@@ -206,7 +206,7 @@
             <div class="title">
                 <h3 class="bold">Additional Information</h3>
             </div>
-            <ul class="show">
+            <ul class="hide">
                 <li>
                     <div class="date">Laguages</div>
                     <div class="info">
