--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
             <div class="title">
                 <h3 class="bold">Work Experience</h3>
             </div>
-            <ul class="hide">
+            <ul class="hide" >
                 <li>
                     <div class="date">November 2018 - November 2019</div>
                     <div class="info">
@@ -208,25 +208,19 @@
             </div>
             <ul class="hide">
                 <li>
-                    <div class="date">Laguages</div>
-                    <div class="info">
-                        <p class="semi_bol">
-                            <ul>
+                    <div class="dat">Laguages</div>
+                            <ul class="hide">
                                 <li>Russian/Belarussian – native</li>
                                 <li>English – B2</li>
                                 <li>Chinese – basic</li>
                             </ul>
-                        </p>     
-                    </div>
-                </li>
+                 </li>
                 <li>
-                    <div class="date">Day of Birth</div>
-                        <p class="semi_bol">
-                            <ul>
+                    <div class="dat">Day of Birth</div>
+                             <ul class="hide">
                                 <li>1998/08/06</li>
                             </ul>
-                        </p>     
-                </li>
+                    </li>
             </ul>  
         </div>
     </div>
